Fix bar text spacing

--- a/core/src/components/uni-bar-text/uni-bar-text.scss
+++ b/core/src/components/uni-bar-text/uni-bar-text.scss
@@ -4,5 +4,6 @@
   display: inline;
   background: color.useVar(primary);
   color: color.useVar(primary, contrast);
-  padding: 0.6rem 0;
+  line-height: 1.4;
+  padding: 0.15rem 0;
 }
